--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,7 +51,7 @@
 }
 
 .order-ahead-container {
-    background-image: url("/public/tigerz.png") no-repeat center center/cover;
+    background-image: url("../../public/below-image.png") no-repeat center center/cover;
 }
 .order-ahead-content-ul:first-child {
     font-family: "Inter";
@@ -86,5 +86,5 @@
 }
 
 .tiger-image-container {
-    background-image: url(/public/tigerz.png) no-repeat center center/cover;
+    background: url("../../public/tigerz.png") no-repeat center center/cover;
 }
